--- a/Sports Cart.html
+++ b/Sports Cart.html
@@ -30,7 +30,7 @@ border-radius: 10px;
 </head> 
 <body> 
  
-<h1>Welcome to Sports Shop!</h1> 
+<h1>Welcome To Digital Sports Club!</h1> 
 <p>Click the button to add an item to the cart.</p> 
 <div class="item"> 
   <p>
