--- a/Sports Cart.html
+++ b/Sports Cart.html
@@ -35,7 +35,7 @@ border-radius: 10px;
 <div class="item"> 
   <p>
  🏀Basketball - ₹700</p> 
-<button onclick="addToCart('Basketball',700)">Add to Cart</button> 
+<button onclick="addToCart(' 🏀Basketball',700)">Add to Cart</button> 
 </div> 
    
 
@@ -43,7 +43,7 @@ border-radius: 10px;
 <div class="item"> 
    <p>
  ⚽ Football(Nivia) - ₹900</p> 
-<button onclick="addToCart('Football',900)">Add to Cart</button> 
+<button onclick="addToCart(' ⚽Football',900)">Add to Cart</button> 
 </div>
 
 
@@ -51,21 +51,21 @@ border-radius: 10px;
 <div class="item">
   <p>
   🥎 Tennis Ball- ₹60</p> 
-<button onclick="addToCart('Tennis Ball',60)">Add to Cart</button> 
+<button onclick="addToCart(' 🥎Tennis Ball',60)">Add to Cart</button> 
 </div> 
 
 
 <div class="item">
   <p>
  🏏Cricket Bat- ₹1500</p> 
-<button onclick="addToCart('Cricket Bat',1500)">Add to Cart</button> 
+<button onclick="addToCart(' 🏏Cricket Bat',1500)">Add to Cart</button> 
 </div>
 
 
 <div class="item">
   <p>
  ⚾Leather Ball - ₹350</p> 
-<button onclick="addToCart('Leather Ball',350)">Add to Cart</button> 
+<button onclick="addToCart(' ⚾Leather Ball',350)">Add to Cart</button> 
 </div>
 
 
@@ -74,7 +74,7 @@ border-radius: 10px;
 <div class="item">
   <p>
  🏸Badminton Kit - ₹1280</p> 
-<button onclick="addToCart('Badminton kit',1280)">Add to Cart</button> 
+<button onclick="addToCart(' 🏸Badminton kit',1280)">Add to Cart</button> 
 </div>
 
 
@@ -82,7 +82,7 @@ border-radius: 10px;
 <div class="item">
   <p>
  🎾Tennis Kit - ₹1200</p> 
-<button onclick="addToCart('Tennis Kit',1200)">Add to Cart</button> 
+<button onclick="addToCart(' 🎾Tennis Kit',1200)">Add to Cart</button> 
 </div>
 
 
@@ -90,15 +90,15 @@ border-radius: 10px;
 <div class="item">
   <p>
 🏐Volleyball  - ₹400</p> 
-<button onclick="addToCart('Volleyball',400)">Add to Cart</button> 
+<button onclick="addToCart(' Volleyball',400)">Add to Cart</button> 
 </div>
 
 
 
 <div class="item">
   <p>
-  \|/Stumps- ₹200</p> 
-<button onclick="addToCart('Stumps',450)">Add to Cart</button> 
+  \|/ Stumps- ₹200</p> 
+<button onclick="addToCart('\|/ Stumps',450)">Add to Cart</button> 
 </div>
 
 
@@ -106,7 +106,7 @@ border-radius: 10px;
 <div class="item">
   <p>
  👟Running Shoes - ₹2500</p> 
-<button onclick="addToCart('Running Shoes',2500)">Add to Cart</button> 
+<button onclick="addToCart('👟Running Shoes',2500)">Add to Cart</button> 
 </div>
 
 
@@ -115,7 +115,7 @@ border-radius: 10px;
 <div class="item">
   <p>
  ⛹ Basketball Kit- ₹2000</p> 
-<button onclick="addToCart('Basketball kit',2000)">Add to Cart</button> 
+<button onclick="addToCart('⛹Basketball kit',2000)">Add to Cart</button> 
 </div>
 
 
@@ -123,7 +123,7 @@ border-radius: 10px;
 <div class="item">
   <p>
  🏂Ice Skating Kit - ₹5750</p> 
-<button onclick="addToCart('Ice Skating Kit',5750 )">Add to Cart</button> 
+<button onclick="addToCart('🏂Ice Skating Kit',5750 )">Add to Cart</button> 
 </div>
 
 
@@ -131,7 +131,7 @@ border-radius: 10px;
 <div class="item">
   <p>
  🥊Boxing Gloves - ₹750</p> 
-<button onclick="addToCart('Boxing Gloves',750)">Add to Cart</button> 
+<button onclick="addToCart('🥊Boxing Gloves',750)">Add to Cart</button> 
 </div>
 
 
@@ -139,7 +139,7 @@ border-radius: 10px;
 <div class="item">
   <p>
  🏌️⛳Golf kit - ₹4500</p> 
-<button onclick="addToCart('Golf Kit',4500)">Add to Cart</button> 
+<button onclick="addToCart('🏌️⛳Golf Kit',4500)">Add to Cart</button> 
 </div>
 
 
@@ -147,7 +147,7 @@ border-radius: 10px;
 <div class="item">
   <p>
 🏓Table Tenis - ₹1650</p> 
-<button onclick="addToCart('Table tenis',1650)">Add to Cart</button> 
+<button onclick="addToCart('🏓Table tenis',1650)">Add to Cart</button> 
 </div>
 <br>
 
