--- a/Sports Cart.html
+++ b/Sports Cart.html
@@ -34,7 +34,7 @@ border-radius: 10px;
 <p>Click the button to add an item to the cart.</p> 
 <div class="item"> 
   <p>
- <img src="https://www.bing.com/th?id=OPAC.xvAJXW1mr6uylA474C474&o=5&pid=21.1&w=148&h=173&rs=1&qlt=100&dpr=1&bw=6&bc=FFFFFF">Basketball - ₹700</p> 
+ <img src="https://www.bing.com/th?id=OPAC.xvAJXW1mr6uylA474C474&o=5&pid=21.1&w=148&h=173&rs=1&qlt=100&dpr=1&bw=6&bc=FFFFFF" height="250" width="250">Basketball - ₹700</p> 
 <button onclick="addToCart(' 🏀Basketball',700)">Add to Cart</button> 
 </div> 
    
@@ -42,7 +42,7 @@ border-radius: 10px;
 
 <div class="item"> 
    <p>
- <img src="https://www.bing.com/th?id=OPAC.PmdytLu%2bsfaxyQ474C474&o=5&pid=21.1&w=124&h=124&rs=1&qlt=100&dpr=1&bw=6&bc=FFFFFF"> Football(Nivia) - ₹900</p> 
+ <img src="https://www.bing.com/th?id=OPAC.PmdytLu%2bsfaxyQ474C474&o=5&pid=21.1&w=124&h=124&rs=1&qlt=100&dpr=1&bw=6&bc=FFFFFF" height="250" width="250"> Football(Nivia) - ₹900</p> 
 <button onclick="addToCart(' ⚽Football',900)">Add to Cart</button> 
 </div>
 
@@ -50,21 +50,21 @@ border-radius: 10px;
  
 <div class="item">
   <p>
-  <img src="https://www.bing.com/th?id=OPAC.s3BlMtSuR0H2HA474C474&o=5&pid=21.1&w=148&h=148&rs=1&qlt=100&dpr=1&bw=6&bc=FFFFFF"> Tennis Ball- ₹60</p> 
+  <img src="https://www.bing.com/th?id=OPAC.s3BlMtSuR0H2HA474C474&o=5&pid=21.1&w=148&h=148&rs=1&qlt=100&dpr=1&bw=6&bc=FFFFFF" height="250" width="250"> Tennis Ball- ₹60</p> 
 <button onclick="addToCart(' 🥎Tennis Ball',60)">Add to Cart</button> 
 </div> 
 
 
 <div class="item">
   <p>
- <img src="https://www.bing.com/th?id=OPAC.slyWXS5GsIC%2bSw474C474&o=5&pid=21.1&w=148&h=260&rs=1&qlt=100&dpr=1&bw=6&bc=FFFFFF">Cricket Bat- ₹2500</p> 
+ <img src="https://www.bing.com/th?id=OPAC.slyWXS5GsIC%2bSw474C474&o=5&pid=21.1&w=148&h=260&rs=1&qlt=100&dpr=1&bw=6&bc=FFFFFF" height="250" width="250">Cricket Bat- ₹2500</p> 
 <button onclick="addToCart(' 🏏Cricket Bat',2500)">Add to Cart</button> 
 </div>
 
 
 <div class="item">
   <p>
- <img src="https://www.bing.com/th?id=OPAC.ghQCrxFdcbDH3Q474C474&o=5&pid=21.1&w=160&h=160&rs=1&qlt=100&dpr=1&c=8&pcl=f5f5f5">Leather Ball - ₹350</p> 
+ <img src="https://www.bing.com/th?id=OPAC.ghQCrxFdcbDH3Q474C474&o=5&pid=21.1&w=160&h=160&rs=1&qlt=100&dpr=1&c=8&pcl=f5f5f5" height="250" width="250">Leather Ball - ₹350</p> 
 <button onclick="addToCart(' ⚾Leather Ball',350)">Add to Cart</button> 
 </div>
 
@@ -73,7 +73,7 @@ border-radius: 10px;
 
 <div class="item">
   <p>
- <img src="https://www.bing.com/th?id=OPAC.3%2fuVTc2eemN3Wg474C474&o=5&pid=21.1&w=148&h=173&rs=1&qlt=100&dpr=1&bw=6&bc=FFFFFF">Badminton Kit - ₹1280</p> 
+ <img src="https://www.bing.com/th?id=OPAC.3%2fuVTc2eemN3Wg474C474&o=5&pid=21.1&w=148&h=173&rs=1&qlt=100&dpr=1&bw=6&bc=FFFFFF" height="250" width="250">Badminton Kit - ₹1280</p> 
 <button onclick="addToCart(' 🏸Badminton kit',1280)">Add to Cart</button> 
 </div>
 
@@ -82,7 +82,7 @@ border-radius: 10px;
 
 <div class="item">
   <p>
-<img src="https://www.bing.com/th?id=OPAC.mCfY9Bv4BBsW%2bA474C474&o=5&pid=21.1&w=132&h=132&rs=1&qlt=100&dpr=1&bw=6&bc=FFFFFF">Volleyball  - ₹700</p> 
+<img src="https://www.bing.com/th?id=OPAC.mCfY9Bv4BBsW%2bA474C474&o=5&pid=21.1&w=132&h=132&rs=1&qlt=100&dpr=1&bw=6&bc=FFFFFF" height="250" width="250">Volleyball  - ₹700</p> 
 <button onclick="addToCart(' Volleyball',700)">Add to Cart</button> 
 </div>
 
@@ -90,7 +90,7 @@ border-radius: 10px;
 
 <div class="item">
   <p>
-<img src="https://www.bing.com/th?id=OPAC.kKuqGziCfGCYUA474C474&o=5&pid=21.1&w=148&h=198&rs=1&qlt=100&dpr=1&bw=6&bc=FFFFFF">Cricket Kit- ₹5000</p> 
+<img src="https://www.bing.com/th?id=OPAC.kKuqGziCfGCYUA474C474&o=5&pid=21.1&w=148&h=198&rs=1&qlt=100&dpr=1&bw=6&bc=FFFFFF" height="250" width="250">Cricket Kit- ₹5000</p> 
 <button onclick="addToCart('Cricket Kit',5000)">Add to Cart</button> 
 </div>
 
@@ -98,7 +98,7 @@ border-radius: 10px;
 
 <div class="item">
   <p>
- <img src="https://www.bing.com/th?id=OPAC.8cuucHqtsYCL2g474C474&o=5&pid=21.1&w=148&h=148&rs=1&qlt=100&dpr=1&bw=6&bc=FFFFFF">Running Shoes - ₹2500</p> 
+ <img src="https://www.bing.com/th?id=OPAC.8cuucHqtsYCL2g474C474&o=5&pid=21.1&w=148&h=148&rs=1&qlt=100&dpr=1&bw=6&bc=FFFFFF" height="250" width="250">Running Shoes - ₹2500</p> 
 <button onclick="addToCart('👟Running Shoes',2500)">Add to Cart</button> 
 </div>
 
@@ -107,7 +107,7 @@ border-radius: 10px;
 
 <div class="item">
   <p>
- <img src="https://www.bing.com/th?id=OPAC.y2%2fnsTLiYwduYw474C474&o=5&pid=21.1&w=124&h=124&rs=1&qlt=100&dpr=1&bw=6&bc=FFFFFF"> Basketball Kit- ₹2000</p> 
+ <img src="https://www.bing.com/th?id=OPAC.y2%2fnsTLiYwduYw474C474&o=5&pid=21.1&w=124&h=124&rs=1&qlt=100&dpr=1&bw=6&bc=FFFFFF" height="250" width="250"> Basketball Kit- ₹2000</p> 
 <button onclick="addToCart('⛹Basketball kit',2000)">Add to Cart</button> 
 </div>
 
@@ -115,7 +115,7 @@ border-radius: 10px;
 
 <div class="item">
   <p>
- <img src="https://th.bing.com/th/id/OIP.a64bzdjILxNIWNY_oNvP6gHaF6?rs=1&pid=ImgDetMain">Skating Kit - ₹5750</p> 
+ <img src="https://th.bing.com/th/id/OIP.a64bzdjILxNIWNY_oNvP6gHaF6?rs=1&pid=ImgDetMain" height="250" width="250">Skating Kit - ₹5750</p> 
 <button onclick="addToCart('🎿Skating Kit',5750 )">Add to Cart</button> 
 </div>
 
@@ -123,7 +123,7 @@ border-radius: 10px;
 
 <div class="item">
   <p>
- <img src="https://www.bing.com/th?id=OPAC.%2bLotVpX1EL276g474C474&o=5&pid=21.1&w=148&h=148&rs=1&qlt=100&dpr=1&bw=6&bc=FFFFFF">Boxing Gloves - ₹1750</p> 
+ <img src="https://www.bing.com/th?id=OPAC.%2bLotVpX1EL276g474C474&o=5&pid=21.1&w=148&h=148&rs=1&qlt=100&dpr=1&bw=6&bc=FFFFFF" height="250" width="250">Boxing Gloves - ₹1750</p> 
 <button onclick="addToCart('🥊Boxing Gloves',1750)">Add to Cart</button> 
 </div>
 
@@ -131,14 +131,14 @@ border-radius: 10px;
 
 <div class="item">
   <p>
- <img src="https://th.bing.com/th/id/OIP.hS3tEJEW_J4k1506L5CgrQAAAA?rs=1&pid=ImgDetMain">FootBall kit - ₹4500</p> 
+ <img src="https://th.bing.com/th/id/OIP.hS3tEJEW_J4k1506L5CgrQAAAA?rs=1&pid=ImgDetMain" height="250" width="250">FootBall kit - ₹4500</p> 
 <button onclick="addToCart('Football Kit',5500)">Add to Cart</button> 
 </div>
 
 
  <div class="item">
   <p>
-<img src="https://m.media-amazon.com/images/I/71edanRJbzL._AC_UL320_.jpg">Studs - ₹1700</p> 
+<img src="https://m.media-amazon.com/images/I/71edanRJbzL._AC_UL320_.jpg" height="250" width="250">Studs - ₹1700</p> 
 <button onclick="addToCart('🏓Studs',1700)">Add to Cart</button> 
 </div>
 <br>
